<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="MainActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/tb_Chexkbox"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/checkBoxPizza"
            android:layout_marginBottom="30dp"
            android:text="@string/string_tb_choisirprod"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            tools:text="Choississez votre produit !" />

        <CheckBox
            android:id="@+id/checkBoxPizza"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cb_Pizza" />

        <CheckBox
            android:id="@+id/checkBoxCafe"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBoxPizza"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/cb_Café" />

        <CheckBox
            android:id="@+id/checkBoxBurger"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBoxCafe"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/cb_Burger" />

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBoxBurger"
            android:layout_marginTop="10dp"
            android:text="@string/btn_Valider" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
